--- a/src/mainboard/intel/amenia/Kconfig
+++ b/src/mainboard/intel/amenia/Kconfig
@@ -14,6 +14,10 @@ config BOARD_SPECIFIC_OPTIONS
 	select SYSTEM_TYPE_LAPTOP
 	select TPM_ON_FAST_SPI
 
+config BOOT_MEDIA_SPI_BUS
+	int
+	default 0
+
 config CHROMEOS
 	select LID_SWITCH
 
