--- a/src/mainboard/intel/amenia/Kconfig
+++ b/src/mainboard/intel/amenia/Kconfig
@@ -25,6 +25,10 @@ config MAINBOARD_DIR
 	string
 	default intel/amenia
 
+config MAINBOARD_FAMILY
+	string
+	default "Intel_Amenia"
+
 config MAINBOARD_PART_NUMBER
 	string
 	default "Amenia"
