Kconfig: rename BOOT_MEDIA_SPI_BUS to BOOT_DEVICE_SPI_FLASH_BUS
Provide a default value of 0 in drivers/spi as there weren't
default values aside from specific mainboards and arch/x86.
Remove any default 0 values while noting to keep the option's
default to 0.

BUG=chrome-os-partner:56151

Change-Id: If9ef585e011a46b5cd152a03e41d545b36355a61
Signed-off-by: Aaron Durbin <adurbin@chromium.org>
Reviewed-on: https://review.coreboot.org/16192
Tested-by: build bot (Jenkins)
Reviewed-by: Furquan Shaikh <furquan@google.com>
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/src/drivers/spi/Kconfig
+++ b/src/drivers/spi/Kconfig
@@ -23,6 +23,13 @@ config SPI_FLASH
 
 if SPI_FLASH
 
+# Keep at 0 because lots of boards assume this default.
+config BOOT_DEVICE_SPI_FLASH_BUS
+	int
+	default 0
+	help
+	  Which SPI bus the boot device is connected to.
+
 config SPI_FLASH_INCLUDE_ALL_DRIVERS
 	bool
 	default n if COMMON_CBFS_SPI_WRAPPER
