--- a/src/mainboard/google/nyan/Kconfig
+++ b/src/mainboard/google/nyan/Kconfig
@@ -62,7 +62,7 @@ config NYAN_BCT_CFG_EMMC
 
 endchoice
 
-config BOOT_MEDIA_SPI_BUS
+config BOOT_DEVICE_SPI_FLASH_BUS
 	int "SPI bus with boot media ROM"
 	range 1 6
 	depends on NYAN_BCT_CFG_SPI
