--- a/src/mainboard/google/nyan_blaze/Kconfig
+++ b/src/mainboard/google/nyan_blaze/Kconfig
@@ -64,7 +64,7 @@ config NYAN_BLAZE_BCT_CFG_EMMC
 
 endchoice
 
-config BOOT_MEDIA_SPI_BUS
+config BOOT_DEVICE_SPI_FLASH_BUS
 	int "SPI bus with boot media ROM"
 	range 1 6
 	depends on NYAN_BLAZE_BCT_CFG_SPI
