drivers/spi: include SPI flash modules for all stages
It shouldn't matter if COMMON_CBFS_SPI_WRAPPER is selected to
include the SPI flash support in all stages. Therefore, include
the SPI flash support files in all the stages. While there include
the same set of files for all stages. They were out of sync for
some reason.

BUG=chrome-os-partner:56151

Change-Id: I933335104203315cbbcf965185a7c176974e6356
Signed-off-by: Aaron Durbin <adurbin@chromium.org>
Reviewed-on: https://review.coreboot.org/16198
Tested-by: build bot (Jenkins)
Reviewed-by: Furquan Shaikh <furquan@google.com>
Reviewed-by: Paul Menzel <paulepanter@users.sourceforge.net>
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/src/drivers/spi/Makefile.inc
+++ b/src/drivers/spi/Makefile.inc
@@ -7,9 +7,11 @@ ramstage-y += spiconsole.c
 smm-$(CONFIG_DEBUG_SMI) += spiconsole.c
 endif
 
-ifeq ($(CONFIG_COMMON_CBFS_SPI_WRAPPER),y)
 bootblock-$(CONFIG_COMMON_CBFS_SPI_WRAPPER) += cbfs_spi.c
-bootblock-y += spi_flash.c
+bootblock-$(CONFIG_SPI_FLASH) += spi_flash.c
+bootblock-$(CONFIG_SPI_FLASH_ADESTO) += adesto.c
+bootblock-$(CONFIG_SPI_FLASH_AMIC) += amic.c
+bootblock-$(CONFIG_SPI_FLASH_ATMEL) += atmel.c
 bootblock-$(CONFIG_SPI_FLASH_EON) += eon.c
 bootblock-$(CONFIG_SPI_FLASH_GIGADEVICE) += gigadevice.c
 bootblock-$(CONFIG_SPI_FLASH_MACRONIX) += macronix.c
@@ -21,6 +23,9 @@ bootblock-$(CONFIG_SPI_FRAM_RAMTRON) += ramtron.c
 
 romstage-$(CONFIG_COMMON_CBFS_SPI_WRAPPER) += cbfs_spi.c
 romstage-$(CONFIG_SPI_FLASH) += spi_flash.c
+romstage-$(CONFIG_SPI_FLASH_ADESTO) += adesto.c
+romstage-$(CONFIG_SPI_FLASH_AMIC) += amic.c
+romstage-$(CONFIG_SPI_FLASH_ATMEL) += atmel.c
 romstage-$(CONFIG_SPI_FLASH_EON) += eon.c
 romstage-$(CONFIG_SPI_FLASH_GIGADEVICE) += gigadevice.c
 romstage-$(CONFIG_SPI_FLASH_MACRONIX) += macronix.c
@@ -32,6 +37,9 @@ romstage-$(CONFIG_SPI_FRAM_RAMTRON) += ramtron.c
 
 verstage-$(CONFIG_COMMON_CBFS_SPI_WRAPPER) += cbfs_spi.c
 verstage-$(CONFIG_SPI_FLASH) += spi_flash.c
+verstage-$(CONFIG_SPI_FLASH_ADESTO) += adesto.c
+verstage-$(CONFIG_SPI_FLASH_AMIC) += amic.c
+verstage-$(CONFIG_SPI_FLASH_ATMEL) += atmel.c
 verstage-$(CONFIG_SPI_FLASH_EON) += eon.c
 verstage-$(CONFIG_SPI_FLASH_GIGADEVICE) += gigadevice.c
 verstage-$(CONFIG_SPI_FLASH_MACRONIX) += macronix.c
@@ -41,12 +49,8 @@ verstage-$(CONFIG_SPI_FLASH_STMICRO) += stmicro.c
 verstage-$(CONFIG_SPI_FLASH_WINBOND) += winbond.c
 verstage-$(CONFIG_SPI_FRAM_RAMTRON) += ramtron.c
 
-endif
-
 ramstage-$(CONFIG_COMMON_CBFS_SPI_WRAPPER) += cbfs_spi.c
 ramstage-$(CONFIG_SPI_FLASH) += spi_flash.c
-
-# drivers
 ramstage-$(CONFIG_SPI_FLASH_ADESTO) += adesto.c
 ramstage-$(CONFIG_SPI_FLASH_AMIC) += amic.c
 ramstage-$(CONFIG_SPI_FLASH_ATMEL) += atmel.c
