--- a/util/crossgcc/Makefile.inc
+++ b/util/crossgcc/Makefile.inc
@@ -22,6 +22,7 @@ help_toolchain help::
 	@echo  '  crossgcc-clean  - Remove all built coreboot cross-compilers'
 	@echo  '  iasl            - Build coreboot IASL compiler (built by all cross targets)'
 	@echo  '  clang           - Build coreboot clang compiler'
+	@echo  '  gnumake         - Build coreboot make'
 	@echo  '  test-toolchain  - Reports if toolchain components are out of date'
 	@echo  '  crossgcc-ARCH   - Build cross-compiler for specific architecture'
 	@echo  '  crosstools-ARCH - Build cross-compiler with GDB for specific architecture'
@@ -39,7 +40,7 @@ crossgcc: clean-for-update
 	crossgcc-mips crossgcc-riscv crossgcc-power8 crossgcc-clean iasl \
 	clang crosstools-i386 crosstools-x64 crosstools-arm \
 	crosstools-aarch64 crosstools-mips crosstools-riscv crosstools-power8 \
-	jenkins-build-toolchain
+	jenkins-build-toolchain gnumake
 
 $(foreach arch,$(TOOLCHAIN_ARCHES),crossgcc-$(arch)): clean-for-update
 	$(MAKE) -C util/crossgcc $(patsubst crossgcc-%,build-%,$@) build_iasl SKIP_GDB=1
@@ -52,6 +53,9 @@ iasl: clean-for-update
 
 clang: clean-for-update
 	$(MAKE) -C util/crossgcc build_clang
+
+gnumake: clean-for-update
+	$(MAKE) -C util/crossgcc build_make
 
 $(foreach arch,$(TOOLCHAIN_ARCHES),crosstools-$(arch)): clean-for-update
 	$(MAKE) -C util/crossgcc $(patsubst crosstools-%,build-%,$@) build_iasl
