vboot: Move TPM-related Kconfig selects from CHROMEOS to VBOOT
CONFIG_VBOOT was recently moved to be independent from CONFIG_CHROMEOS.
However, the latter still has some 'select' clauses to ensure that
required TPM libraries are built. The TPM is an essential part of vboot,
and without these libraries the vboot code cannot compile... therefore,
they should be moved under CONFIG_VBOOT.

Change-Id: I0145558e5127c65c6a82d62f25b5a39e24cb8726
Signed-off-by: Julius Werner <jwerner@chromium.org>
Reviewed-on: https://review.coreboot.org/16229
Tested-by: build bot (Jenkins)
Reviewed-by: Paul Menzel <paulepanter@users.sourceforge.net>
Reviewed-by: Aaron Durbin <adurbin@chromium.org>

--- a/src/vboot/Kconfig
+++ b/src/vboot/Kconfig
@@ -136,6 +136,10 @@ config VBOOT_OPROM_MATTERS
 config VBOOT
 	bool "Verify firmware with vboot."
 	default n
+	select TPM if !MAINBOARD_HAS_TPM2
+	select TPM2 if MAINBOARD_HAS_TPM2
+	select TPM_INIT_FAILURE_IS_FATAL if PC80_SYSTEM && LPC_TPM
+	select SKIP_TPM_STARTUP_ON_NORMAL_BOOT if PC80_SYSTEM && LPC_TPM
 	depends on HAVE_HARD_RESET
 	help
 	  Enabling VBOOT will use vboot to verify the components of the firmware
