--- a/src/mainboard/google/gru/Makefile.inc
+++ b/src/mainboard/google/gru/Makefile.inc
@@ -26,6 +26,7 @@ verstage-y += reset.c
 romstage-y += boardid.c
 romstage-y += chromeos.c
 romstage-y += memlayout.ld
+romstage-y += romstage.c
 romstage-y += sdram_configs.c
 
 ramstage-y += boardid.c
