--- a/src/mainboard/google/reef/Kconfig
+++ b/src/mainboard/google/reef/Kconfig
@@ -32,6 +32,10 @@ config MAINBOARD_DIR
 	string
 	default google/reef
 
+config VARIANT_DIR
+	string
+	default "reef" if BOARD_GOOGLE_REEF
+
 config MAINBOARD_PART_NUMBER
 	string
 	default "Reef" if BOARD_GOOGLE_REEF
