--- a/src/lib/Makefile.inc
+++ b/src/lib/Makefile.inc
@@ -147,6 +147,7 @@ postcar-y += imd.c
 bootblock-y += hexdump.c
 ramstage-y += hexdump.c
 romstage-y += hexdump.c
+verstage-y += hexdump.c
 
 bootblock-$(CONFIG_REG_SCRIPT) += reg_script.c
 verstage-$(CONFIG_REG_SCRIPT) += reg_script.c
