soc/marvell/mvmap2315: Add gpio driver
Testing: booted successfully.

Change-Id: I89dee1bbf8b68460897f64bf673b328533e70cd4
Signed-off-by: Hakim Giydan <hgiydan@marvell.com>
Reviewed-on: https://review.coreboot.org/15508
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/src/soc/marvell/mvmap2315/Makefile.inc
+++ b/src/soc/marvell/mvmap2315/Makefile.inc
@@ -19,6 +19,7 @@ bootblock-y += bootblock.c
 bootblock-y += clock.c
 bootblock-y += fiq.S
 bootblock-y += gic.c
+bootblock-y += gpio.c
 bootblock-y += media.c
 bootblock-y += pinmux.c
 bootblock-y += reset.c
@@ -28,6 +29,7 @@ bootblock-y += uart.c
 
 ramstage-y += cbmem.c
 ramstage-y += media.c
+ramstage-y += gpio.c
 ramstage-y += ramstage_entry.S
 ramstage-y += reset.c
 ramstage-y += soc.c
@@ -37,6 +39,7 @@ ramstage-y += uart.c
 
 romstage-y += cbmem.c
 romstage-y += clock.c
+romstage-y += gpio.c
 romstage-y += media.c
 romstage-y += mmu_operations.c
 romstage-y += reset.c
