soc/marvell/mvmap2315: Add load_validate driver
Load_validate: it loads and validates images from
flash using hash values stored in the BDB.

Testing: booted successfully.

Change-Id: I0b00e8c60ed76622d03cb232d5c4273b4077aae7
Signed-off-by: Hakim Giydan <hgiydan@marvell.com>
Reviewed-on: https://review.coreboot.org/16148
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/src/soc/marvell/mvmap2315/Makefile.inc
+++ b/src/soc/marvell/mvmap2315/Makefile.inc
@@ -16,11 +16,14 @@
 ifeq ($(CONFIG_SOC_MARVELL_MVMAP2315),y)
 
 bootblock-y += bootblock.c
+bootblock-y += bdb.c
 bootblock-y += clock.c
+bootblock-y += digest.c
 bootblock-y += fiq.S
 bootblock-y += gic.c
 bootblock-y += gpio.c
 bootblock-y += flash.c
+bootblock-y += load_validate.c
 bootblock-y += media.c
 bootblock-y += pinmux.c
 bootblock-y += reset.c
