--- a/src/soc/marvell/mvmap2315/Makefile.inc
+++ b/src/soc/marvell/mvmap2315/Makefile.inc
@@ -27,6 +27,7 @@ bootblock-y += flash.c
 bootblock-y += load_validate.c
 bootblock-y += media.c
 bootblock-y += pinmux.c
+bootblock-y += pmic.c
 bootblock-y += reset.c
 bootblock-y += timer.c
 bootblock-y += sdram.c
