soc/intel/skylake: Add config option for Skylake-H Sku support
Change-Id: Ia9c1c065f20bf2b37afc7485ef8df3abd35e2f14
Reviewed-on: https://review.coreboot.org/16607
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/src/soc/intel/skylake/Kconfig
+++ b/src/soc/intel/skylake/Kconfig
@@ -185,6 +185,12 @@ config UART_DEBUG
 	select DRIVERS_UART_8250MEM_32
 	select NO_UART_ON_SUPERIO
 
+config SKYLAKE_SOC_PCH_H
+	bool
+	default n
+	help
+	  Choose this option if you have a PCH-H chipset.
+
 config CHIPSET_BOOTBLOCK_INCLUDE
 	string
 	default "soc/intel/skylake/bootblock/timestamp.inc"
