--- a/src/drivers/i2c/tpm/Kconfig
+++ b/src/drivers/i2c/tpm/Kconfig
@@ -2,6 +2,24 @@ config I2C_TPM
 	bool "I2C TPM"
 	depends on TPM || TPM2
 
+config MAINBOARD_HAS_I2C_TPM_CR50
+	bool
+	default n
+
+choice
+	prompt "I2C TPM Driver"
+	default I2C_TPM_CR50 if MAINBOARD_HAS_I2C_TPM_CR50
+	default I2C_TPM_GENERIC if !MAINBOARD_HAS_I2C_TPM_CR50
+	depends on I2C_TPM
+
+config I2C_TPM_GENERIC
+	bool "Generic I2C TPM Driver"
+
+config I2C_TPM_CR50
+	bool "CR50 I2C TPM Driver"
+
+endchoice
+
 config DRIVER_TPM_I2C_BUS
 	hex "I2C TPM chip bus"
 	default 9 # FIXME, workaround for Kconfig BS
