--- a/src/drivers/i2c/tpm/Kconfig
+++ b/src/drivers/i2c/tpm/Kconfig
@@ -2,14 +2,9 @@ config I2C_TPM
 	bool "I2C TPM"
 	depends on TPM || TPM2
 
-config MAINBOARD_HAS_I2C_TPM_CR50
-	bool
-	default n
-
 choice
 	prompt "I2C TPM Driver"
-	default I2C_TPM_CR50 if MAINBOARD_HAS_I2C_TPM_CR50
-	default I2C_TPM_GENERIC if !MAINBOARD_HAS_I2C_TPM_CR50
+	default I2C_TPM_GENERIC
 	depends on I2C_TPM
 
 config I2C_TPM_GENERIC
@@ -28,11 +23,6 @@ config DRIVER_TPM_I2C_BUS
 config DRIVER_TPM_I2C_ADDR
 	hex "I2C TPM chip address"
 	default 2 # FIXME, workaround for Kconfig BS
-	depends on I2C_TPM
-
-config DRIVER_TPM_I2C_IRQ
-	int "IRQ or GPE to use for TPM interrupt"
-	default -1
 	depends on I2C_TPM
 
 config DRIVER_I2C_TPM_ACPI
