Kconfig: Prefix hex defaults with 0x
Because these variables had "non-hexidecimal" defaults, they
were updated by kconfig when writing defconfig files.

Change-Id: Ic1a070d340708f989157ad18ddc79de7bb92d873
Signed-off-by: Martin Roth <martinroth@google.com>
Reviewed-on: https://review.coreboot.org/16827
Tested-by: build bot (Jenkins)
Reviewed-by: Duncan Laurie <dlaurie@chromium.org>
Reviewed-by: Patrick Georgi <pgeorgi@google.com>
Reviewed-by: Paul Menzel <paulepanter@users.sourceforge.net>

--- a/src/drivers/uart/Kconfig
+++ b/src/drivers/uart/Kconfig
@@ -69,7 +69,7 @@ config UART_USE_REFCLK_AS_INPUT_CLOCK
 
 config UART_PCI_ADDR
 	hex "UART's PCI bus, device, function address"
-	default 0
+	default 0x0
 	help
 	  Specify zero if the UART is connected to another bus type.
 	  For PCI based UARTs, build the value as:
