--- a/src/mainboard/google/reef/Kconfig
+++ b/src/mainboard/google/reef/Kconfig
@@ -50,14 +50,17 @@ config MAINBOARD_DIR
 config VARIANT_DIR
 	string
 	default "reef" if BOARD_GOOGLE_REEF
+	default "pyro" if BOARD_GOOGLE_PYRO
 
 config DEVICETREE
 	string
+	default "variants/pyro/devicetree.cb" if BOARD_GOOGLE_PYRO
 	default "variants/baseboard/devicetree.cb"
 
 config MAINBOARD_PART_NUMBER
 	string
 	default "Reef" if BOARD_GOOGLE_REEF
+	default "Pyro" if BOARD_GOOGLE_PYRO
 
 config MAINBOARD_FAMILY
 	string
@@ -67,6 +70,7 @@ config GBB_HWID
 	string
 	depends on CHROMEOS
 	default "REEF TEST 3240" if BOARD_GOOGLE_REEF
+	default "PYRO TEST 0290" if BOARD_GOOGLE_PYRO
 
 config MAX_CPUS
 	int
