[WIP] console/Kconfig: Calculate COM port base addresses only on x86
On other architectures, the serial ports aren't mapped at 0x3f8.

WIP: I'm not sure how exactly the dependency should be encoded in
     Kconfig.

Change-Id: Ia1de545325a53607f62d08e76b2f61b25edbe6ef
Signed-off-by: Jonathan Neuschäfer <j.neuschaefer@gmx.net>
Reviewed-on: https://review.coreboot.org/16982
Tested-by: build bot (Jenkins)
Reviewed-by: Ronald G. Minnich <rminnich@gmail.com>

--- a/src/console/Kconfig
+++ b/src/console/Kconfig
@@ -57,6 +57,7 @@ config UART_FOR_CONSOLE
 
 # FIXME: Early programming in romstage is incorrect as we should
 # program different LDN to actually change the physical port.
+if ARCH_X86
 config TTYS0_BASE
 	hex
 	depends on DRIVERS_UART
@@ -75,6 +76,7 @@ comment "Serial port base address = 0x3e8"
 depends on UART_FOR_CONSOLE = 2
 comment "Serial port base address = 0x2e8"
 depends on UART_FOR_CONSOLE = 3
+endif # ARCH_X86
 
 choice
 	prompt "Baud rate"
